# funding-service-design-post-award-data-store

./: .dockerignore  .flaskenv  .gitignore  .pre-commit-config.yaml  .prettierrc  Dockerfile  Procfile  README-hackday.md  README-native-webforms.md  README.md  app.py  background_download.py  blueprints.py  build.py  council_place_dict.py  docker-compose.yml  index.js  package-lock.json  package.json  postgres_test.py  project.toml  pyproject.toml  pytest.ini  renovate.json  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_worker.py  static_assets.py  test.py  tutorial.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: aws_copilot_deployment.yml  deploy.yml  deploy_combined_service.yml  deploy_monolith.yml  deployment_cd_test_prod.yml  monolith_package.yml  pullpreview.yml  run_command.yml  test.yml  test_e2e.yml
admin/: __init__.py  actions.py  base.py  entities.py  forms.py
apply/: .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  app.py  build.py  create_app.py  filters.py  helpers.py  project.toml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tasks.py
apply/.github/: dependabot.yml
apply/app/: __init__.py  constants.py  create_app.py  filters.py  helpers.py
apply/config/: __init__.py
apply/default/: account_routes.py  application_routes.py  content_routes.py  data.py  eligibility_routes.py  error_routes.py  routes.py
apply/forms/: feedback.py  research.py
apply/models/: application.py  application_display_mapping.py  application_summary.py  eligibility_questions.py  feedback.py  language.py  research.py
apply/tests/: conftest.py  test_all_questions.py  test_content_routes.py  test_dashboard.py  test_error_routes.py  test_filters.py  test_fund_round_notification.py  test_lru_cache.py  test_research_survey.py  test_routes.py  test_start_page.py  test_tasklist.py  test_tasks.py  test_user_validation.py  utils.py
common/: blueprints.py  const.py  context_processors.py  exceptions.py
config/: __init__.py
config/envs/: aws.py  default.py  development.py  production.py  test.py  unit_test.py
copilot/: .workspace  README.md  environments
copilot/data-store/: manifest.yml
copilot/data-store-celery/: manifest.yml
copilot/download-report/: manifest.yml
copilot/monolith/: manifest.yml
copilot/post-award/: manifest.yml
copilot/post-award-celery/: manifest.yml
copilot/post-award-data-store/: manifest.yml
core/: aws.py  cli.py  const.py  errors.py  exceptions.py  handlers.py  metrics.py  reference_data.py  util.py  validation_schema.py
core/controllers/: async_download.py  const.py  download.py  download_new.py  examples.py  failed_submission.py  get_filters.py  ingest.py  ingest_dependencies.py  load_functions.py  load_functions_historical.py  mappings.py  misc.py  organisations.py  partial_submissions.py  permissions.py  programmes.py  project.py  projects.py  retrieve.py  retrieve_db.py  retrieve_submission_file.py  retrieve_submission_file_db.py  users.py  web_forms.py
core/db/: DLUCH_Data_Model_V3.4_EXAMPLE.xlsx  __init__.py  entities.py  fake_models.py  propagate_pending_submission.py  propagate_raw_submission.py  queries.py  sqlalchemy_schemadisplay.py  utils.py
core/dto/: fund.py  organisation.py  pending_submission.py  programme.py  project_ref.py  raw_submission.py  reporting_round.py  role.py  user.py  user_programme_role.py
core/dynamodb/: dynamo_api.py  dynamodb.py
core/extraction/: __init__.py  historical_utils.py  round_1.py  round_one.py  round_two.py  towns_fund.py  towns_fund_round_four.py  towns_fund_round_one.py  towns_fund_round_three.py  towns_fund_round_two.py  utils.py
core/messaging/: __init__.py  messaging.py  tf_messaging.py
core/serialisation/: data_serialiser.py
core/serialization/: download_json_serializer.py  download_xlsx_serializer.py
core/table_extraction/: __init__.py  exceptions.py  extract.py  process.py  validate.py
core/tables/: __init__.py  exceptions.py  extract.py  process.py  validate.py
data_store/: aws.py  celery.py  cli.py  const.py  exceptions.py  metrics.py  reference_data.py  typing.py  util.py
find/: .flaskenv  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  TODO.md  app.py  build.py  config.py  const.py  data.py  download_data.py  main_app.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  routes.py  static_assets.py
find/main/: forms.py  (+4 more)
openapi/: api.yml  components.yml  utils.py
report/: decorators.py  flask_form.py  form_navigator.py  form_pages.py  forms.py  fund_reporting_structures.py  pages.py  pdf_generator.py  persistence.py  views.py
schemas/: data_model.py  towns_fund.json  towns_fund.py
scripts/: anonymise_2.sql  batch_ingest.py  db_filename_clean.py  localstack-script.sh  migrate_db_files_to_s3.py  migration-task-script.py  migration-task-script.sh  move_to_jsonb.py  new-validation.py  pathfinders_validation.py  psql-conduit.sh  re-ingest.py  restore-sanitised-database.sh  sanitise-db.sql  sanitise-post-award-database.sh  santise_aws_datbase.sh  ssm-conn.sh  update-tf-grant-awarded.py  validate.py  validation-spike.py
submit/: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Procfile  README.md  TODO.md  __init__.py  build.py  const.py  project.toml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg  static_assets.py  utils.py
tables/: __init__.py  checks.py  dtypes.py  exceptions.py  extract.py  message.py  process.py  schema.py  table.py  utils.py  validate.py
tests/: c_and_p_outcomes.csv  conftest.py  dynamo_spike_tests.py  test_aws.py  test_core_metrics.py  test_core_utils.py  test_full_pf_pipeline.py  test_handlers.py  test_misc.py  test_normalization.py  test_postcodes.py  test_serialization.py  util_test.py  utils.py
vite/: .gitignore  bun.lockb  main.js  package.json  vite.config.mjs
(+1035 files in other folders)
