[project]
dependencies = [
    #-----------------------------------
    #   Utils
    #-----------------------------------
    "funding-service-design-utils<=2.1.0",
    #-----------------------------------
    #   Flask Version
    #-----------------------------------
    "flask==2.2.5",
    #-----------------------------------
    #   Connexion APIs
    #-----------------------------------
    "connexion[swagger-ui]==2.14.1",
    "prance==0.22.*",
    "openapi-spec-validator==0.5.*",
    #-----------------------------------
    #   Excel Ingestion and Output
    #-----------------------------------
    "pandas==1.5.*",
    "openpyxl==3.1.*",
    "XlsxWriter==3.1.*",
    #-----------------------------------
    #   SQLAlchemy
    #-----------------------------------
    "SQLAlchemy>=2.0.9,<=2.1.0",
    "Flask-SQLAlchemy==3.0.*",
    "psycopg2-binary",
    "marshmallow-sqlalchemy",
    #-----------------------------------
    #   tables
    #-----------------------------------
    "pandera==0.17.*",
    #-----------------------------------
    #   GOV.UK Notify
    #-----------------------------------
    "notifications-python-client",
    #-----------------------------------
    #   monitoring and observability
    #-----------------------------------
    "sentry-sdk",
    "ipython>=8.25.0",
]

[tool.rye]
virtual = true
dev-dependencies = [
    "debugpy",
    "pydot==1.4.2",  # ERD diagram

    # -----------------------------------
    #   Testing
    #-----------------------------------
    "pytest",
    "pytest-env",
    "pytest-mock",

    #-----------------------------------
    #   Code Quality
    #-----------------------------------
    "mypy==1.10.0",  # If bumping this, please also bump .pre-commit-config.yml
    "pandas-stubs",
    "sqlalchemy-stubs",
    "types-beautifulsoup4",
    "types-colorama",
    "types-flask",
    "types-Flask-Migrate",
    "types-jmespath",
    "types-openpyxl",
    "types-psycopg2",
    "types-python-dateutil",
    "types-Pygments",
    "types-PyMySQL",
    "types-PyYAML",
    "types-requests",
    "types-setuptools",
    "types-flask-sqlalchemy",

    "pre-commit",
    "ruff==0.4.7",  # If bumping this, please also bump .pre-commit-config.yml
]

[tool.ruff]
line-length = 120

target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C90",  # mccabe cyclomatic complexity
    "G",  # flake8-logging-format
]
ignore = []
exclude = [
    "db/migrations/versions/",
    "venv",
    ".venv",
    "__pycache__",
]
mccabe.max-complexity = 12


[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
  "flask_assets",
  "fsd_utils.*",
  "notifications_python_client.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "submit"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "app.*",
  "config.*",
  "core.*",
  "scripts.*",
  "tests.*",
]
disable_error_code = ["import-untyped", "name-defined", "attr-defined", "import-not-found", "index"]

[[tool.mypy.overrides]]
module = "core/controllers/failed_submission"
disable_error_code = ["assignment", "arg-type", "call-arg"]

[[tool.mypy.overrides]]
module = "core/controllers/ingest_dependencies"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "core/db/entities"
disable_error_code = ["arg-type", "attr-defined", "call-arg", "var-annotated"]

[[tool.mypy.overrides]]
module = "core/db/queries"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "core.messaging.messaging"
disable_error_code = ["union-attr"]

[[tool.mypy.overrides]]
module = "core.messaging.tf_messaging"
disable_error_code = ["call-overload", "arg-type"]

[[tool.mypy.overrides]]
module = "core/serialisation/data_serialiser"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "core/table_extraction/extract"
disable_error_code = ["misc", "return-value"]

[[tool.mypy.overrides]]
module = "core/table_extraction/process"
disable_error_code = ["arg-type", "assignment", "call-overload", "operator", "return-value", "misc"]

[[tool.mypy.overrides]]
module = "core/transformation.*"
disable_error_code = ["assignment", "union-attr"]

[[tool.mypy.overrides]]
module = "core/transformation/towns_fund/tf_transform_r3"
disable_error_code = ["operator", "arg-type", "call-overload", "used-before-def"]

[[tool.mypy.overrides]]
module = "core.util"
disable_error_code = ["operator", "union-attr"]

[[tool.mypy.overrides]]
module = "tests/transformation_tests/pathfinders/test_pf_transform_r1"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "core/validation/pathfinders/cross_table_validation/ct_validate_r1"
disable_error_code = ["arg-type", "operator", "return-value", "union-attr"]

[[tool.mypy.overrides]]
module = "core/validation/towns_fund/fund_specific_validation/fs_validate_r4"
disable_error_code = ["arg-type", "assignment"]

[[tool.mypy.overrides]]
module = "core/validation/towns_fund/schema_validation/validate"
disable_error_code = ["arg-type", "operator", "return-value"]

[[tool.mypy.overrides]]
module = "scripts.validate"
disable_error_code = ["import-not-found"]

[[tool.mypy.overrides]]
module = "tests/validation_tests/pathfinders/schema_validation_tests/test_pf_schema_validate"
disable_error_code = ["arg-type", "assignment"]
